# hft-backtest

./: Cargo.toml  README.md
docs/: creating_new_strategy.md  limit_order_market_making.md  ml_prediction_strategy.md  momentum_strategy.md
exmple_data/: book_snapshot_25.csv  l2_incremental_orderbook.csv
src/: config.rs  main.rs
src/backtest/: backtest_runner.rs  mod.rs
src/common/: data_loader.rs  helpers.rs  mod.rs
src/config/: data.rs  mod.rs  strategy.rs  timing.rs  trading.rs
src/controller/: commands.rs  mod.rs  strategy_controller.rs
src/display/: mod.rs  order_book_display.rs
src/monitor/: mod.rs  performance_monitor.rs
src/print_depth/: mod.rs  print_depth_runner.rs
src/strategy/: mod.rs  strategy_type.rs
src/strategy/base/: example_strategy.rs  mod.rs  runner_base.rs  strategy_trait.rs
src/strategy/market_maker/: market_maker_runner.rs  mod.rs  order_manager.rs  order_tracker.rs  pricing.rs  risk_manager.rs  spread.rs
src/strategy/momentum/: indicator.rs  mod.rs  momentum_runner.rs
src/strategy/prediction/: mod.rs  orderbook_features.rs  prediction_runner.rs  price_predictor.rs
src/ui/: app.rs  control_panel.rs  data.rs  mod.rs  orderbook.rs  performance_monitor.rs  stats_panel.rs
src/ui/charts/: history.rs  mod.rs  renderer.rs
