[package]
name = "hft-backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
hftbacktest = "0.8.1"
tokio = { version = "1.48.0", features = ["full"] }
eframe = "0.30"
egui = "0.30"
egui_plot = "0.30"
crossbeam-channel = "0.5"
rfd = "0.15"

# Deep Learning with Candle
candle-core = "0.8"
candle-nn = "0.8"
rand = "0.8"